--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "npm-amd",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Scans installed npm modules, browserifies them if they are not AMD, and produce a path object to be consumed by RequireJS and the like.",
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/mocha",
     "testWatch": "node_modules/.bin/mocha --watch"
+  },
+  "bin": {
+    "npm-amd": "./cmd.js"
   },
   "repository": "git://github.com/jpka/npm-amd.git",
   "keywords": [
@@ -22,13 +25,15 @@
   "devDependencies": {
     "chai": "~1.6.0",
     "mocha": "~1.9.0",
-    "backbone": "~1.0.0",
-    "sinon": "~1.7.2"
+    "sinon": "~1.7.2",
+    "requirejs": "~2.1.6"
   },
   "dependencies": {
     "browserify": "~2.13.2",
     "fs-extra": "~0.6.1",
     "module-investigator": "~0.1.3",
-    "async": "~0.2.8"
+    "async": "~0.2.8",
+    "browser-resolve": "~1.0.1",
+    "md5": "~1.0.0"
   }
 }
