--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-amd",
-  "version": "0.2.5",
+  "version": "0.3.5",
   "description": "Scans installed npm modules, browserifies them if they are not AMD, and produce a path object to be consumed by RequireJS and the like.",
   "main": "index.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "module-investigator": "~0.1.3",
     "async": "~0.2.8",
     "browser-resolve": "~1.0.1",
-    "md5": "~1.0.0"
+    "md5": "~1.0.0",
+    "minimatch": "~0.2.12"
   }
 }
