--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-amd",
-  "version": "0.4.6",
+  "version": "1.0.0",
   "description": "Scans installed npm modules, browserifies them if they are not AMD, and produce a path object to be consumed by RequireJS and the like.",
   "main": "index.js",
   "scripts": {
@@ -31,9 +31,13 @@
     "browserify": "~2.13.2",
     "fs-extra": "~0.6.1",
     "module-investigator": "~0.1.3",
-    "async": "~0.2.8",
     "browser-resolve": "~1.0.1",
-    "md5": "~1.0.0",
-    "minimatch": "~0.2.12"
+    "minimatch": "~0.2.12",
+    "async": "~0.2.9",
+    "readable-stream": "~1.0.2",
+    "sigmund": "~1.0.0"
+  },
+  "engines": {
+    "node": ">=0.8.0"
   }
 }
